--- a/views/partials/detailed-rating.ejs
+++ b/views/partials/detailed-rating.ejs
@@ -1,6 +1,6 @@
 <input type="hidden" name="id" value="<%- huis.id %>" />
 <input type="radio" id="1star" name="stars" value="1">
-<label for="1star"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+<label for="1star"><svg width="200px" height="100px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
         <!-- Outer path for star outline -->
         <path fill="none" stroke="var(--ci-primary-color, currentColor)" stroke-width="32" d="M494,198.671a40.536,40.536,0,0,0-32.174-27.592L345.917,152.242,292.185,47.828a40.7,40.7,0,0,0-72.37,0L166.083,152.242,50.176,171.079a40.7,40.7,0,0,0-22.364,68.827l82.7,83.368-17.9,116.055a40.672,40.672,0,0,0,58.548,42.538L256,428.977l104.843,52.89a40.69,40.69,0,0,0,58.548-42.538l-17.9-116.055,82.7-83.368A40.538,40.538,0,0,0,494,198.671Z"/>
         <!-- Inner path for star fill -->
@@ -41,4 +41,4 @@
 
 <input type="submit" value="Rate" />
 
-<a href="">Bekijk hier de overzicht van de score </a>
+<a href="/score/<%= huis.id %>">Bekijk hier de overzicht van de score </a>
