fixen sterren de data word goed getoond de user mist alleen nog wat die speicifieke persoon heeft ingevuld en notities werkt niet met de enhancement

--- a/public/styles/yujing.css
+++ b/public/styles/yujing.css
@@ -243,7 +243,7 @@ dit word hergebruiks users
 /*hier being het form met de sterren*/
 .fieldsetRating {
     display: flex;
-    background-color: deepskyblue;
+    /*background-color: deepskyblue;*/
 }
 .labelRating:after{
     width: 1.5em;
