--- a/views/partials/ShowNotes.ejs
+++ b/views/partials/ShowNotes.ejs
@@ -1,4 +1,14 @@
 <ul class="show_notes">
-
-    <li><%= notities %></li>
+    <% if (feedback.length > 0) { %>
+        <li>House ID: <%= feedback[feedback.length - 1].house %></li>
+        <% if (feedback[feedback.length - 1].note) { %>
+            <li>Note : <%= feedback[feedback.length - 1].note %></li>
+        <% } else { %>
+            <p>No note for this house.</p>
+        <% } %>
+    <% } else { %>
+        <p>No feedback available.</p>
+    <% } %>
+    <p>uw notite is toegevoeged</p>
 </ul>
+
