het weergeven van de score is ongeveer gelukt alleen staat het nu dubbel

--- a/public/styles/yujing.css
+++ b/public/styles/yujing.css
@@ -190,7 +190,10 @@ dit word hergebruiks users
         transform: rotate(1turn)
     }
 }
-
+.successtae{
+    background-color: green;
+    content: ✅;
+}
 
 /*usrs score*/
 .usersScore{
