--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -226,7 +226,7 @@ main {
     .card-image {
       width: 100%;
       height: 40%;
-      object-fit: fill;
+      object-fit: cover;
     }
   
     .card-link:before {
