--- a/views/score.ejs
+++ b/views/score.ejs
@@ -95,11 +95,14 @@
         <section class="formRatingItem">
             <h2>Ratings:</h2>
 <!--            todo als je op submit drukt dan moet dit komen te staan de partial anders is het effect weg-->
+<!--            dit staat vast ook zonder post-->
             <ul>
                 <%- include('partials/ShowScore', {result: house}); -%>
             </ul>
 
         </section>
+
+<!--        dit hier is de post partial-->
         <ul class="showscore">
         </ul>
 
