--- a/views/partials/ShowScore.ejs
+++ b/views/partials/ShowScore.ejs
@@ -1,7 +1,6 @@
 <ul class="output_other_users">
-    <li>uw score is toegevoegd</li>
+    <li>uw score</li>
     <% if (feedback.length > 0) { %>
-        <li>House ID: <%= feedback[feedback.length - 1].house %></li>
         <% if (feedback[feedback.length - 1].rating) { %>
             <li>Kitchen : <%= feedback[feedback.length - 1].rating.kitchen %></li>
             <li>general : <%= feedback[feedback.length - 1].rating.general %></li>
