--- a/views/score.ejs
+++ b/views/score.ejs
@@ -94,23 +94,11 @@
         <!--             this ul must be here becuase it has other css than the ul of the partial-->
         <section class="formRatingItem">
             <h2>Ratings:</h2>
-<!--            todo als je op submit drukt dan moet dit komen te staan de partial anders is het effect weg-->
-<!--            dit staat vast ook zonder post-->
-            <ul class="output_other_users">
-                <li>uw score</li>
-                <% if (feedback.length > 0) { %>
-                    <% if (feedback[feedback.length - 1].rating) { %>
-                        <li>Kitchen : <%= feedback[feedback.length - 1].rating.kitchen %></li>
-                        <li>general : <%= feedback[feedback.length - 1].rating.general %></li>
-                        <li>badkamer: <%= feedback[feedback.length - 1].rating.bathroom %></li>
-                        <li>tuin: <%= feedback[feedback.length - 1].rating.garden %></li>
-                    <% } else { %>
-                        <p class="successtate">er is geens core ingevoerd</p>
-                    <% } %>
-                <% } else { %>
-                    <p>No feedback available.</p>
-                <% } %>
-            </ul>
+<!--            todo als je op submit drukt dan moet dit komen te staan de
+todo partial anders is het effect weg en de partial moet geupdate worden-->
+<!--            dit staat vast ook zonder post en dit moet denk ik beter want result is niks-->
+                <%- include('partials/ShowScore', {result: house}); -%>
+
         </section>
     </div>
 
@@ -133,21 +121,7 @@
 
     <section class=" formRatingItem ">
         <h2>notitie</h2>
-        <ul class="output_other_users">
-            <li>uw score</li>
-            <% if (feedback.length > 0) { %>
-                <% if (feedback[feedback.length - 1].rating) { %>
-                    <li>Kitchen : <%= feedback[feedback.length - 1].rating.kitchen %></li>
-                    <li>general : <%= feedback[feedback.length - 1].rating.general %></li>
-                    <li>badkamer: <%= feedback[feedback.length - 1].rating.bathroom %></li>
-                    <li>tuin: <%= feedback[feedback.length - 1].rating.garden %></li>
-                <% } else { %>
-                    <p class="successtate">er is geens core ingevoerd</p>
-                <% } %>
-            <% } else { %>
-                <p>No feedback available.</p>
-            <% } %>
-        </ul>
+        <%- include('partials/showNotes', {result: house}); -%>
 
     </section>
     <section class="show_notes">
