fixen issue met ratings er mist nog een volledige form met de andere 2 scores

--- a/views/partials/ShowScore.ejs
+++ b/views/partials/ShowScore.ejs
@@ -1,4 +1,4 @@
-<ul class="output_other_users">
+<ul class="showscore">
     <li>uw score</li>
     <% if (feedback.length > 0) { %>
         <% if (feedback[feedback.length - 1].rating) { %>
