--- a/views/score.ejs
+++ b/views/score.ejs
@@ -114,7 +114,8 @@ todo partial anders is het effect weg en de partial moet geupdate worden-->
             <button type="submit" class="savebutton">Opslaan</button>
 
         </form>
-
+        <p class="loading-state"></p>
+        <p class="successtae"></p>
     </section>
 
 
