notite werkt alleen moet er iets van een parse naar een int dat je niet dit ziet : {"prchtig"}

--- a/views/partials/ShowNotes.ejs
+++ b/views/partials/ShowNotes.ejs
@@ -2,7 +2,7 @@
     <% if (feedback.length > 0) { %>
         <li>House ID: <%= feedback[feedback.length - 1].house %></li>
         <% if (feedback[feedback.length - 1].note) { %>
-            <li>Note: <%= parseInt(feedback[feedback.length - 1].note) %></li>
+            <li>Note: <%=(feedback[feedback.length - 1].note) %></li>
         <% }
 
 
