users staan goed alleen mist er nog design

--- a/views/score.ejs
+++ b/views/score.ejs
@@ -81,8 +81,52 @@
                 <label aria-label="4 sterren" for="keuken4" class="labelRating"></label>
 
 
-                <input class="inputRating" id="keuken5" name="keukenNumber" type="radio" value="5 sterren">
+                <input class="inputRating" id="keuken5" name="keukenNumber" type="radio" value="5">
                 <label aria-label="5 sterren" for="keuken5" class="labelRating"></label>
+            </fieldset>
+
+            <fieldset class="fieldsetRating">
+                <legend class="titleRating">badkamer</legend>
+                    <input class="inputRating" id="badkamer1" name="badkamerNumber" type="radio" value="1">
+                <label aria-label="1 " for="badkamer1" class="labelRating"></label>
+
+
+                <input class="inputRating" id="badkamer2" name="badkamerNumber" type="radio" value="2">
+                <label aria-label="2 sterren" for="badkamer2" class="labelRating"></label>
+
+
+                <input class="inputRating" id="badkamer3" name="badkamerNumber" type="radio" value="3 ">
+                <label aria-label="3 sterren" for="badkamer3" class="labelRating"></label>
+
+
+                <input class="inputRating" id="badkamer4" name="badkamerNumber" type="radio" value="4">
+                <label aria-label="4 sterren" for="badkamer4" class="labelRating"></label>
+
+
+                <input class="inputRating" id="badkamer5" name="badkamerNumber" type="radio" value="5">
+                <label aria-label="5 sterren" for="badkamer5" class="labelRating"></label>
+            </fieldset>
+
+            <fieldset class="fieldsetRating">
+                <legend class="titleRating">Tuin</legend>
+                    <input class="inputRating" id="Tuin1" name="tuinNumber" type="radio" value="1">
+                <label aria-label="1 " for="Tuin1" class="labelRating"></label>
+
+
+                <input class="inputRating" id="Tuin2" name="tuinNumber" type="radio" value="2">
+                <label aria-label="2 sterren" for="Tuin2" class="labelRating"></label>
+
+
+                <input class="inputRating" id="Tuin3" name="tuinNumber" type="radio" value="3 ">
+                <label aria-label="3 sterren" for="Tuin3" class="labelRating"></label>
+
+
+                <input class="inputRating" id="Tuin4" name="tuinNumber" type="radio" value="4">
+                <label aria-label="4 sterren" for="Tuin4" class="labelRating"></label>
+
+
+                <input class="inputRating" id="Tuin5" name="tuinNumber" type="radio" value="5">
+                <label aria-label="5 sterren" for="Tuin5" class="labelRating"></label>
             </fieldset>
 <!--            todo hier moet een interactie komen dat de button van kleur veranderd-->
             <button type="submit" class="savebutton">submit</button>
