--- a/public/styles/yujing.css
+++ b/public/styles/yujing.css
@@ -74,6 +74,7 @@ dit word hergebruiks users
     /*background-color: #31cfec;*/
     justify-items: center;  /* Center items horizontally */
     align-items: center;
+    place-items: center;
     grid-column-gap: 3em;
     padding: 2em;
 
@@ -106,6 +107,22 @@ dit word hergebruiks users
 
 /*einde herbgerbuiken*/
 
+/*score pagina*/
+.section__users{
+    display: grid;
+    justify-content: center;
+}
+/*todo navragen waarom de ul niet in de breedte gaat als het in een seciton staat met justicy content center*/
+.usersListScore{
+    display: grid;
+    grid-template-columns:repeat( auto-fit, minmax(192px, 1fr) ) ;
+    /*background-color: #31cfec;*/
+    justify-items: center;  /* Center items horizontally */
+    align-items: center;
+    place-items: center;
+    grid-column-gap: 3em;
+    padding: 2em;
+}
 /*dit is index*/
 .index-favorite-header{
     display: flex;
@@ -119,6 +136,12 @@ dit word hergebruiks users
     width: 250px;
     height: auto;
 }
+.link_address{
+    color: var(--lochmara-primary-color);
+    text-decoration: none;
+    font-size: 1.5em;
+    font-weight: bold;
+}
 .houseInfo{
     margin-bottom: 2em;
     display: flex;
@@ -129,59 +152,33 @@ dit word hergebruiks users
 .houseInfo__moreInfo{
     display: grid;
     text-align: start;
+    justify-content: center;
     padding: 1.5em  2em;
     line-height: 1.5em;
     width: 80%;
 }
 .orangeLine {
     background-color: var(--web-orange-primary-color);
-    margin-bottom: 10px;
-    width: 80%;
+    /*margin-bottom: 10px;*/
+    /*width: 80%;*/
+    width: calc(80vw); /* Adjust for smaller screens */
     height: 5px;
     margin-left: 2em;
     margin-right: 2em;
+    margin-bottom: 2em;
     /*  dit is de breedte van de hr lijn*/
 }
 .formsRating{
 
     display: grid;
     justify-content: center;
+    grid-template-columns: 1fr;
     margin-left: 5em;
-    /*grid-template-rows: auto auto auto auto;*/
+    grid-template-rows: auto auto auto auto;
     grid-row-gap: 3em;
 
     margin-bottom: 2em;
     padding-right: 5em;
-}
-.formRatingItem__header{
-    display: grid;
-    grid-column-start: 1;
-    grid-column-end: 3;
-}
-.formRatingItem__ratings{
-    display: grid;
-    grid-column-start: 1;
-    grid-row-start: 2;
-    grid-column-end: 1;
-}
-.formRatingItem__ratingsShow{
-    display: grid;
-    grid-column-start: 2;
-    grid-row-start: 2;
-    grid-column-end: 2;
-}
-.formRatingItem__Note{
-    display: grid;
-    grid-column-start: 1;
-    grid-row-start: 4;
-    grid-column-end: 1;
-}
-.formRatingItem__NoteShow{
-    display: grid;
-    grid-column-start: 2;
-    grid-row-start: 4;
-    grid-column-end: 2;
-
 }
 .formRatingItem {
     background-color: var(--regent-blue-primary-color);
@@ -228,7 +225,7 @@ dit word hergebruiks users
 .successtae{
     /*background-color: green;*/
     content: ✅;
-    font-size: 1.5em;
+    font-size: 5em;
 }
 
 /*usrs score*/
@@ -249,14 +246,56 @@ dit word hergebruiks users
 @media (min-width: 45em) {
     .formsRating{
         /*grid-template-columns: repeat( auto-fit, minmax(319px, 1fr) ) ;*/
-        /*grid-template-columns: auto auto;*/
+        grid-template-columns: auto auto;
         grid-column-gap: 3em;
+        grid-row-gap: 2em;
     }
     .formRatingItem{
         max-width: 30em;
         width: 19em;
     }
 
+
+    .formRatingItem__header{
+        display: grid;
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+    .formRatingItem__ratings{
+        display: grid;
+        grid-column-start: 1;
+        grid-row-start: 2;
+        grid-row-end: 2;
+        grid-column-end: 1;
+    }
+    .formRatingItem__ratingsShow{
+        display: grid;
+        grid-column-start: 2;
+        grid-row-start: 2;
+        grid-column-end: 2;
+    }
+    .formRatingItem__Note{
+        display: grid;
+        grid-column-start: 1;
+        grid-row-start: 4;
+        grid-column-end: 1;
+    }
+    .formRatingItem__NoteShow{
+        display: grid;
+        grid-column-start: 2;
+        grid-row-start: 4;
+        grid-column-end: 2;
+
+    }
+
+
+
+}
+
+@media (min-width: 1200px) {
+        .orangeLine{
+            max-width: 1400px;
+        }
 }
 .output_other_users{
     display: flex;
